--- a/.hintrc
+++ b/.hintrc
@@ -2,7 +2,7 @@
 	"connector": {
 		"name": "local",
 		"options": {
-			"pattern": ["**", "!.git/**", "!node_modules/**"]
+			"pattern": ["**", "!coverage/**", "!.git/**", "!node_modules/**"]
 		}
 	},
 	"extends": ["development"],
