--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "jest --coverage",
 		"watch": "webpack --watch",
 		"start": "webpack serve --open",
-		"build": "webpack"
+		"build": "webpack",
+		"deploy": "gh-pages -d dist"
 	},
 	"repository": {
 		"type": "git",
@@ -39,6 +40,7 @@
 		"webpack-dev-server": "^4.9.3"
 	},
 	"dependencies": {
+		"gh-pages": "^4.0.0",
 		"jest-environment-jsdom": "^29.0.1"
 	}
 }
